# world3d

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: find_opengl.cmake
include/: actor.h  camera.h  scene.h  window.h
src/: actor.cpp  camera.cpp  main.cpp  scene.cpp  window.cpp
